ghi/app/src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&family=Roboto+Slab&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Montserrat+Alternates:wght@500&family=Roboto+Slab&display=swap');

body {
    min-height: 100vh;
}

#revsuccess {
    font-family: 'Antonio', sans-serif;
    font-size: 7em;
}

#mainpage {
    font-family: 'Roboto Slab', serif;
    font-size: .9em;
}

nav {
    font-family: 'Bebas Neue', cursive;
    font-size: 1.5em;
    background-color: white;
}

#root, html {
    background-image: url("https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1883&q=80");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: top;
    background-attachment: fixed;
    min-height: 100vh;
}


#mainpageDiv {
    background-color: rgba(255, 255, 255);
    width: 100%;
    margin: 0 auto;
    padding: 0 0 0 0;
}

form, #formDiv {
    background-color: white;
    margin: 15px auto;
    padding-bottom: 15px;
    padding-top: 5px;
    border-radius: 10px;
}

footer {
    position: sticky;
    left: 0;
    top: 100%;
    bottom: 0;
    width: 100vw;
    padding-top: auto;

}

#footerColor {
    background-color: white;
    width: 100vw;
}

#divCard {
    width: 100%;
    background-color: rgb(255, 255, 255);
}

